--- a/index.html
+++ b/index.html
@@ -20,6 +20,36 @@
         </em>
       </p>
     </main>
+    <footer style='font-family: sans-serif'>
+      <p>
+        <em>Meanwhile, do be in touch</em>
+      </p>
+      <p>
+        <a href='https://github.com/costa'>
+          <img alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' src='https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67' style='position: absolute; top: 0; right: 0; border: 0;'>
+        </a>
+      </p>
+      <p>
+        <a href='http://il.linkedin.com/in/costashapiro'><img src='https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png' width='160' height='33' alt="View Costa Shapiro's profile on LinkedIn" border='0'>
+        </a>
+      </p>
+      <p>
+        <a href='http://astrails.com' style='text-decoration: none'>
+          <img src='http://astrails.com/assets/logo_100x95-4b48c2d1e248f301572a8aad15d881c9.png' width='100' height='95' alt='Visit astrails.com' border='0' style='vertical-align:middle'>
+          The latest and the greatest guys I've been working for.
+        </a>
+      </p>
+      <p>
+        <a class='twitter-follow-button' data-show-count='false' data-size='large' href='https://twitter.com/costashapiro'>Follow @costashapiro</a>
+        <script>
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+        </script>
+      </p>
+      <p>
+        <script async='' src='https://static.medium.com/embed.js'></script>
+        <a class='m-profile' href='https://medium.com/@costa'>Costa Shapiro</a>
+      </p>
+    </footer>
     <script src='type_fx.js'></script>
   </body>
 </html>
