more FX fixes, now mobile-compatible

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>CostaShapiro's AppShop</title>
     <meta name='description' content="CostaShapiro's AppShop">
     <meta name='author' content='Costa Shapiro'>
@@ -10,19 +11,23 @@
     <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js'></script>
   </head>
   <body>
-    <header style='height: 99px; text-align: center;'>
-      <h1><span class='type-fx'>Costa</span><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span>
-        <span class='type-fx'>App</span><span class='type-fx'>Shop</span></h1>
+    <header style='position: relative; height: 198px;'>
+      <h1 style='display: table; position: absolute; width: 100%; height: 198px;'>
+        <p style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'><span class='type-fx'>Costa</span><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span>
+          <span class='type-fx'>App</span><span class='type-fx'>Shop</span></p>
+      </h1>
     </header>
-    <main style='height: 99px; text-align: center;'>
-      <p>
-        <em><span class='type-fx'>Coming</span><span class='type-fx'>Soon</span><span class='type-fx'>...</span>
-        </em>
-      </p>
+    <main style='position: relative; height: 198px;'>
+      <h2 style='display: table; position: absolute; width: 100%; height: 198px;'>
+        <p style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'>
+          <em><span class='type-fx'>Coming</span><span class='type-fx'>Soon</span><span class='type-fx'>...</span>
+          </em>
+        </p>
+      </h2>
     </main>
     <footer style='font-family: sans-serif'>
       <p>
-        <em>Meanwhile, do be in touch</em>
+        <em>Meanwhile, do be in touch:</em>
       </p>
       <p>
         <a href='https://github.com/costa'>
