--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <p>
         <a href='http://astrails.com' style='width: 120px;'>
           <img src='http://astrails.com/assets/logo_100x95-4b48c2d1e248f301572a8aad15d881c9.png' alt='Visit astrails.com' style='width: 100px; height: 95px; vertical-align: middle; border: 0;'>
-          <span style='display: inline-block; width: 240px; margin-left: 18px;'>The latest and the greatest guys I've been working for.</span>
+          <span style='display: inline-block; width: 240px; margin-left: 18px;'>— the latest and the greatest guys I've been working for</span>
         </a>
       </p>
     </footer>
