code polish + uservoice

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </p>
       <p>
         <a href='http://il.linkedin.com/in/costashapiro'>
-          <img src='https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png' width='160' height='33' alt="View Costa Shapiro's profile on LinkedIn" border='0'>
+          <img src='https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png' alt="View Costa Shapiro's profile on LinkedIn" style='width: 160px; height: 33px; border: 0;'>
         </a>
       </p>
       <p>
@@ -59,12 +59,12 @@
         </script>
       </p>
       <p>
-        <script async='' src='https://static.medium.com/embed.js'></script>
+        <script async src='https://static.medium.com/embed.js'></script>
         <a class='m-profile' href='https://medium.com/@costa'>Costa Shapiro</a>
       </p>
       <p>
         <a href='http://mines.mouldwarp.com'>
-          <large style='font: xx-large monospace; color: #ccc; background: #333; padding: 6px; border-radius: 3px;'>mines!</large>
+          <span style='font: xx-large monospace; color: #ccc; background: #333; padding: 6px; border-radius: 3px;'>mines!</span>
           — my old blog
         </a>
       </p>
@@ -76,5 +76,6 @@
       </p>
     </footer>
     <script src='type_fx.js'></script>
+    <script async src='uservoice.js'></script>
   </body>
 </html>
