--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name='description' content="CostaShapiro's AppShop">
     <meta name='author' content='Costa Shapiro'>
     <script src='//code.jquery.com/jquery-2.1.3.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js'></script>
     <style>
