--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
           <span style='display: inline-block; width: 240px; margin-left: 18px;'>— the latest and the greatest guys I've been working for</span>
         </a>
       </p>
+      <hr>
+      <p>
+        <em>Oh and big up guys for the:</em>
+        <ul style='font-family: monospace;'>
+          <li>Bash+*NIX+friends</li>
+          <li>MacBookAir+OSX(+macports)</li>
+          <li>git+github+pages+atom*</li>
+          <li>Ruby+Rails+ecosystem</li>
+          <li>World+Wide+Web+technologies</li>
+          <li>jQuery+Backbone.js+Coffeescript+friends</li>
+          <li>PostgreSQL+Firebase</li>
+          <li>npm+gulp+bower+Browserify</li>
+          <li>HAML+SASS+Bootstrap</li>
+          <li>Trello+UserVoice+Dropbox+Gmail+Twitter</li>
+          <li>Google Fonts+DNSimple+Heroku</li>
+          <li>All that jazz!</li>
+        </ul>
+      </p>
     </footer>
     <script src='type_fx.js'></script>
     <script async src='uservoice.js'></script>
