--- a/index.html
+++ b/index.html
@@ -29,23 +29,50 @@
     <a href='https://github.com/costa'>
       <img alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' src='https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67' style='position: absolute; top: 0; right: 0; border: 0;'>
     </a>
-    <header style='position: relative; height: 198px;'>
-      <h1 style='display: table; position: absolute; width: 100%; height: 198px;'>
-        <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'><span class='type-fx'>Costa</span><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span>
-          <span class='type-fx'>App</span><span class='type-fx'>Shop</span></span>
+    <header>
+      <h1 style='position: relative; height: 198px;'>
+        <span style='display: table; position: absolute; width: 100%; height: 198px;'>
+          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'><span class='type-fx'>
+              Costa
+            </span><span class='type-fx'>
+              Shapiro
+            </span><span class='type-fx'>
+              's
+            </span>
+            <span class='type-fx'>
+              App
+            </span><span class='type-fx'>
+              Shop
+            </span></span>
+        </span>
       </h1>
+      <h2 style='text-align: center; font-family: monospace;'>
+        one-stop full-stack construction
+      </h2>
     </header>
-    <main style='position: relative; height: 198px;'>
-      <h2 style='display: table; position: absolute; width: 100%; height: 198px;'>
-        <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'>
-          <span class='type-fx'>Coming</span>
-          <span class='x-type-fx' style='display: none; font-size: 44.4%;'>Really</span>
-          <span class='type-fx'>Soon</span><span class='type-fx'>...</span></span>
+    <main>
+      <h2 style='position: relative; height: 198px;'>
+        <span style='display: table; position: absolute; width: 100%; height: 198px;'>
+          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'>
+            <span class='type-fx'>
+              Coming
+            </span>
+            <span class='fade-in-later type-fx' style='display: none; font-size: 44.4%;'>
+              Really
+            </span>
+            <span class='type-fx'>
+              Soon
+            </span><span class='type-fx'>
+              ...
+            </span></span>
+        </span>
       </h2>
     </main>
     <footer style='position: relative; font-family: sans-serif;'>
       <p>
-        <em>Meanwhile, do be in touch:</em>
+        <em>
+          Meanwhile, do be in touch:
+        </em>
         <br>
       </p>
       <p>
@@ -54,43 +81,77 @@
         </a>
       </p>
       <p>
-        <a class='twitter-follow-button' data-show-count='false' data-size='large' href='https://twitter.com/costashapiro'>Follow @costashapiro</a>
+        <a class='twitter-follow-button' data-show-count='false' data-size='large' href='https://twitter.com/costashapiro'>
+          Follow @costashapiro
+        </a>
         <script>
           !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
         </script>
       </p>
       <p>
         <script async src='https://static.medium.com/embed.js'></script>
-        <a class='m-profile' href='https://medium.com/@costa'>Costa Shapiro</a>
+        <a class='m-profile' href='https://medium.com/@costa'>
+          Costa Shapiro
+        </a>
       </p>
       <p>
         <a href='http://mines.mouldwarp.com'>
-          <span style='font: xx-large monospace; color: #ccc; background: #333; padding: 6px; border-radius: 3px;'>mines!</span>
+          <span style='font: xx-large monospace; color: #ccc; background: #333; padding: 6px; border-radius: 3px;'>
+            mines!
+          </span>
           — my old blog
         </a>
       </p>
       <p>
         <a href='http://astrails.com' style='width: 120px;'>
           <img src='http://astrails.com/assets/logo_100x95-4b48c2d1e248f301572a8aad15d881c9.png' alt='Visit astrails.com' style='width: 100px; height: 95px; vertical-align: middle; border: 0;'>
-          <span style='display: inline-block; width: 240px; margin-left: 18px;'>— the latest and the greatest guys I've been working for</span>
+          <span style='display: inline-block; width: 240px; margin-left: 18px;'>
+            — the latest and the greatest guys I've been working for
+          </span>
         </a>
       </p>
       <hr>
       <p>
-        <em>Oh and big up guys for the:</em>
+        <em>
+          Oh and big up guys for the:
+        </em>
         <ul style='font-family: monospace;'>
-          <li>Bash+*NIX+friends</li>
-          <li>MacBookAir+OSX(+macports)</li>
-          <li>git+github+pages+atom*</li>
-          <li>Ruby+Rails+ecosystem</li>
-          <li>World+Wide+Web+technologies</li>
-          <li>jQuery+Backbone.js+Coffeescript+friends</li>
-          <li>PostgreSQL+Firebase</li>
-          <li>npm+gulp+bower+Browserify</li>
-          <li>HAML+SASS+Bootstrap</li>
-          <li>Trello+UserVoice+Dropbox+Gmail+Twitter</li>
-          <li>Google Fonts+DNSimple+Heroku</li>
-          <li>All that jazz!</li>
+          <li>
+            Bash+*NIX+friends
+          </li>
+          <li>
+            MacBookAir+OSX(+macports)
+          </li>
+          <li>
+            git+github+pages+atom*
+          </li>
+          <li>
+            Ruby+Rails+ecosystem
+          </li>
+          <li>
+            World+Wide+Web+technologies
+          </li>
+          <li>
+            jQuery+Backbone.js+Coffeescript+friends
+          </li>
+          <li>
+            PostgreSQL+Firebase
+          </li>
+          <li>
+            npm+gulp+bower+Browserify
+          </li>
+          <li>
+            HAML+SASS+Bootstrap
+          </li>
+          <li>
+            Trello+UserVoice+Dropbox+Gmail+Twitter
+          </li>
+          <li>
+            Google Fonts+DNSimple+Heroku
+          </li>
+          <li>
+            All that jazz!
+          </li>
         </ul>
       </p>
     </footer>
