--- a/index.html
+++ b/index.html
@@ -32,18 +32,8 @@
     <header>
       <h1 style='position: relative; height: 198px;'>
         <span style='display: table; position: absolute; width: 100%; height: 198px;'>
-          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'><span class='type-fx'>
-              Costa
-            </span><span class='type-fx'>
-              Shapiro
-            </span><span class='type-fx'>
-              's
-            </span>
-            <span class='type-fx'>
-              App
-            </span><span class='type-fx'>
-              Shop
-            </span></span>
+          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'><span class='type-fx'>Costa</span><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span>
+            <span class='type-fx'>App</span><span class='type-fx'>Shop</span></span>
         </span>
       </h1>
       <h2 style='text-align: center; font-family: monospace;'>
@@ -60,11 +50,7 @@
             <span class='fade-in-later type-fx' style='display: none; font-size: 44.4%;'>
               Really
             </span>
-            <span class='type-fx'>
-              Soon
-            </span><span class='type-fx'>
-              ...
-            </span></span>
+            <span class='type-fx'>Soon</span><span class='type-fx'>...</span></span>
         </span>
       </h2>
     </main>
@@ -96,14 +82,12 @@
       </p>
       <p>
         <a href='http://mines.mouldwarp.com'>
-          <span style='font: xx-large monospace; color: #ccc; background: #333; padding: 6px; border-radius: 3px;'>
-            mines!
-          </span>
+          <span style='vertical-align: middle; font: 48px monospace; color: #ccc; background: #333; padding: 6px; border-radius: 3px;'>mines!</span>
           — my old blog
         </a>
       </p>
       <p>
-        <a href='http://astrails.com' style='width: 120px;'>
+        <a href='http://astrails.com'>
           <img src='http://astrails.com/assets/logo_100x95-4b48c2d1e248f301572a8aad15d881c9.png' alt='Visit astrails.com' style='width: 100px; height: 95px; vertical-align: middle; border: 0;'>
           <span style='display: inline-block; width: 240px; margin-left: 18px;'>
             — the latest and the greatest guys I've been working for
@@ -113,11 +97,11 @@
       <hr>
       <p>
         <em>
-          Oh and big up guys for the:
+          Oh, and big up guys for:
         </em>
         <ul style='font-family: monospace;'>
           <li>
-            Bash+*NIX+friends
+            UNIX
           </li>
           <li>
             MacBookAir+OSX(+macports)
