--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
       .type-fx {
         color: #666;
-        transition: font-weight, font-size 0.15s linear;
+        transition: font-weight, font-size 0.15s;
       }
     </style>
   </head>
@@ -30,10 +30,12 @@
       <img alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' src='https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67' style='position: absolute; top: 0; right: 0; border: 0;'>
     </a>
     <header>
-      <h1 style='position: relative; height: 198px;'>
-        <span style='display: table; position: absolute; width: 100%; height: 198px;'>
-          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'><span class='type-fx'>Costa</span><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span>
-            <span class='type-fx'>App</span><span class='type-fx'>Shop</span></span>
+      <h1 style='position: relative; width: 100%; height: 198px;'>
+        <span style='display: table; position: absolute; width: 100%; height: 198px; overflow: hidden;'>
+          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'>
+            <span><span class='type-fx'>Costa</span><wbr></wbr><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span></span>
+            <span><span class='type-fx'>App</span><wbr></wbr><span class='type-fx'>Shop</span></span>
+          </span>
         </span>
       </h1>
       <h2 style='text-align: center; font-family: monospace;'>
@@ -42,14 +44,10 @@
     </header>
     <main>
       <h2 style='position: relative; height: 198px;'>
-        <span style='display: table; position: absolute; width: 100%; height: 198px;'>
+        <span style='display: table; position: absolute; width: 100%; height: 198px; overflow: hidden;'>
           <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'>
-            <span class='type-fx'>
-              Coming
-            </span>
-            <span class='fade-in-later type-fx' style='display: none; font-size: 44.4%;'>
-              Really
-            </span>
+            <span class='type-fx'>Coming</span>
+            <span class='fade-in-later type-fx' style='display: none; font-size: 44.4%;'>Really</span>
             <span class='type-fx'>Soon</span><span class='type-fx'>...</span></span>
         </span>
       </h2>
@@ -89,7 +87,7 @@
       <p>
         <a href='http://astrails.com'>
           <img src='http://astrails.com/assets/logo_100x95-4b48c2d1e248f301572a8aad15d881c9.png' alt='Visit astrails.com' style='width: 100px; height: 95px; vertical-align: middle; border: 0;'>
-          <span style='display: inline-block; width: 240px; margin-left: 18px;'>
+          <span style='display: inline-block; width: 198px; margin-left: 18px;'>
             — the latest and the greatest guys I've been working for
           </span>
         </a>
@@ -128,7 +126,7 @@
             HAML+SASS+Bootstrap
           </li>
           <li>
-            Trello+UserVoice+Dropbox+Gmail+Twitter
+            WorkFlowy+Trello+UserVoice+Dropbox+Gmail+Twitter
           </li>
           <li>
             Google Fonts+DNSimple+Heroku
