--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <a href='https://github.com/costa'>
       <img alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' src='https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67' style='position: absolute; top: 0; right: 0; border: 0;'>
     </a>
-    <header>
+    <header style='width: 100%;'>
       <h1 style='position: relative; width: 100%; height: 198px;'>
-        <span style='display: table; position: absolute; width: 100%; height: 198px; overflow: hidden;'>
-          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'>
-            <span><span class='type-fx'>Costa</span><wbr></wbr><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span></span>
-            <span><span class='type-fx'>App</span><wbr></wbr><span class='type-fx'>Shop</span></span>
+        <span style='display: table; position: absolute; width: 100%; height: 198px;'>
+          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center; overflow: hidden;'>
+            <span><span class='type-fx'>Costa</span><span class='type-fx'>Shapiro</span><span class='type-fx'>'s</span></span>
+            <span><span class='type-fx'>App</span><span class='type-fx'>Shop</span></span>
           </span>
         </span>
       </h1>
@@ -42,12 +42,16 @@
         one-stop full-stack construction
       </h2>
     </header>
-    <main>
+    <main style='width: 100%;'>
       <h2 style='position: relative; height: 198px;'>
-        <span style='display: table; position: absolute; width: 100%; height: 198px; overflow: hidden;'>
-          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center;'>
-            <span class='type-fx'>Coming</span>
-            <span class='fade-in-later type-fx' style='display: none; font-size: 44.4%;'>Really</span>
+        <span style='display: table; position: absolute; width: 100%; height: 198px;'>
+          <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center; overflow: hidden;'>
+            <span class='type-fx'>
+              Coming
+            </span>
+            <span class='fade-in-later type-fx' style='display: none; font-size: 44.4%;'>
+              Really
+            </span>
             <span class='type-fx'>Soon</span><span class='type-fx'>...</span></span>
         </span>
       </h2>
