--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style='width: 100%;'>
     <a href='https://github.com/costa'>
       <img alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' src='https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67' style='position: absolute; top: 0; right: 0; border: 0;'>
     </a>
@@ -43,7 +43,7 @@
       </h2>
     </header>
     <main style='width: 100%;'>
-      <h2 style='position: relative; height: 198px;'>
+      <h2 style='position: relative; width: 100%; height: 198px;'>
         <span style='display: table; position: absolute; width: 100%; height: 198px;'>
           <span style='display: table-cell; width: 100%; vertical-align: middle; text-align: center; overflow: hidden;'>
             <span class='type-fx'>
@@ -85,13 +85,13 @@
       <p>
         <a href='http://mines.mouldwarp.com'>
           <span style='vertical-align: middle; font: 48px monospace; color: #ccc; background: #333; padding: 6px; border-radius: 3px;'>mines!</span>
-          — my old blog
+          <span style='display: inline-block; max-width: 25%; vertical-align: middle;'>— my old blog</span>
         </a>
       </p>
       <p>
         <a href='http://astrails.com'>
           <img src='http://astrails.com/assets/logo_100x95-4b48c2d1e248f301572a8aad15d881c9.png' alt='Visit astrails.com' style='width: 100px; height: 95px; vertical-align: middle; border: 0;'>
-          <span style='display: inline-block; width: 198px; margin-left: 18px;'>
+          <span style='display: inline-block; max-width: 50%; margin-left: 18px; vertical-align: middle;'>
             — the latest and the greatest guys I've been working for
           </span>
         </a>
