--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
           </li>
         </ul>
       </p>
+      <p>
+        <img alt='qr code' rel='nofollow' src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fcostashapiro.com&chs=180x180&choe=UTF-8&chld=L|2'>
+      </p>
     </footer>
     <script src='type_fx.js'></script>
     <script async src='uservoice.js'></script>
