insecure astrails fix

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </p>
       <p>
         <a href='http://astrails.com'>
-          <img class='astrails-logo' src='http://astrails.com/assets/logo_100x95-4b48c2d1e248f301572a8aad15d881c9.png' alt='Visit astrails.com'>
+          <img class='astrails-logo' src='astrails_100x95.png' alt='Visit astrails.com'>
           <span class='long-logo-desc'>
             — the latest and the greatest guys I've been working for
           </span>
