content+contact fixup

--- a/index.html
+++ b/index.html
@@ -59,24 +59,38 @@
             <div class='tab'>
               <ul>
                 <li>
-                  You have an app idea and you want a credible assessment of the resources as to execute it.
+                  You have an app idea and you want a
+                  <strong>
+                    credible assessment
+                  </strong>
+                  of the resources as to execute it.
                   <br>
                   The results may surprise you one way or another.
                 </li>
                 <li>
-                  You have allocated the resources and you want to go ahead and develop your
-                  <abbr title='minimal viable product'>MVP</abbr>
+                  You have allocated the resources and you want to go ahead and
+                  <strong>
+                    develop your
+                    <abbr title='minimal viable product'>MVP</abbr>
+                  </strong>
                   app as soon as possible.
                   <br>
                   The speed is of the essence, yet you don't want to develop debts.
                 </li>
                 <li>
-                  You have an app project in development and you want a pragmatic expert review of its technology, architecture or UX.
+                  You have an app project in development and you want a
+                  <strong>
+                    pragmatic expert review
+                  </strong>
+                  of its technology, architecture or UX.
                   <br>
                   Avoid personal attachment to existing code, stay business-oriented.
                 </li>
                 <li>
-                  Well you may even be considering building an app alongside your main product line — and off your current area of expertise — so you have to decide between building a new team in house or just launching the damn app.
+                  Well you may even be considering building an app alongside your main product line — and off your current area of expertise — so you have to decide between building a new team in house or just
+                  <strong>
+                    launching the damn app.
+                  </strong>
                   <br>
                   The team-building may be delayed until the app — built by app experts — has proven its value for your business.
                 </li>
@@ -90,10 +104,7 @@
                 </li>
                 <li>
                   I'm lucky to possess some rich academic background and have been crunching algorithms, complex structures and scientific data on more than one job.
-                  Naturally, I have both experience and interest in what is now called
-                  <em>
-                    Big Data.
-                  </em>
+                  Naturally, I have both experience and interest in what is now called Big Data.
                 </li>
                 <li>
                   I've conducted numerous system integrations and I'm currently particularly fluent with social networking components.
@@ -111,8 +122,13 @@
     <footer>
       <p>
         <em>
-          Now, do be in touch:
+          Now, do be in touch, I'm friendly:
         </em>
+      </p>
+      <p>
+        <a href='&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#99;&#111;&#115;&#116;&#97;&#x40;&#109;&#111;&#x75;&#x6c;&#100;&#x77;&#97;&#114;&#112;&#46;&#99;&#111;&#x6d;' title='Mail Costa'>
+          &#99;&#111;&#115;&#116;&#97;&#x40;&#109;&#111;&#x75;&#x6c;&#100;&#x77;&#97;&#114;&#112;&#46;&#99;&#111;&#x6d;
+        </a>
       </p>
       <p>
         <a href='https://il.linkedin.com/in/costashapiro'>
@@ -150,7 +166,7 @@
       <hr>
       <br>
       <em>
-        Oh, and big up guys for:
+        Oh, and big up guys for my favourite working tools:
       </em>
       <ul class='tech-specs'>
         <li>
