--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </strong>
                   of the resources as to execute it.
                   <br>
-                  The results may surprise you one way or another.
+                  The results may surprise you one way or the other.
                 </li>
                 <li>
                   You have allocated the resources and you want to go ahead and
@@ -126,9 +126,7 @@
         </em>
       </p>
       <p>
-        <a href='&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#99;&#111;&#115;&#116;&#97;&#x40;&#109;&#111;&#x75;&#x6c;&#100;&#x77;&#97;&#114;&#112;&#46;&#99;&#111;&#x6d;' title='Mail Costa'>
-          &#99;&#111;&#115;&#116;&#97;&#x40;&#109;&#111;&#x75;&#x6c;&#100;&#x77;&#97;&#114;&#112;&#46;&#99;&#111;&#x6d;
-        </a>
+        <a href='&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#99;&#111;&#115;&#116;&#97;&#x40;&#109;&#111;&#x75;&#x6c;&#100;&#x77;&#97;&#114;&#112;&#46;&#99;&#111;&#x6d;' title='Mail Costa'>&#99;&#111;&#115;&#116;&#97;&#x40;&#109;&#111;&#x75;&#x6c;&#100;&#x77;&#97;&#114;&#112;&#46;&#99;&#111;&#x6d;</a>
       </p>
       <p>
         <a href='https://il.linkedin.com/in/costashapiro'>
@@ -136,18 +134,14 @@
         </a>
       </p>
       <p>
-        <a class='twitter-follow-button' data-show-count='false' data-size='large' href='https://twitter.com/costashapiro'>
-          Follow @costashapiro
-        </a>
+        <a class='twitter-timeline' data-widget-id='565146128711053312' href='https://twitter.com/costashapiro'>Tweets by @costashapiro</a>
         <script>
-          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
         </script>
       </p>
       <p>
         <script async src='https://static.medium.com/embed.js'></script>
-        <a class='m-profile' href='https://medium.com/@costa'>
-          Costa Shapiro
-        </a>
+        <a class='m-profile' href='https://medium.com/@costa'>Costa Shapiro</a>
       </p>
       <p>
         <a href='http://mines.mouldwarp.com'>
