--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>CostaShapiro's AppShop</title>
-    <meta name='description' content="CostaShapiro's AppShop">
-    <meta name='author' content='Costa Shapiro'>
+    <title>Costa Shapiro's App Shop</title>
+    <meta name='description' content="Costa Shapiro's App Shop: Building an app for your business? Building apps is my business, it is one-stop full-stack construction . 25 years of industry experience at your service.">
+    <meta name='author' content="Costa Shapiro's App Shop">
+    <link rel='image_src' href='logo-512x512.png'>
     <script src='//code.jquery.com/jquery-2.1.3.min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js'></script>
@@ -13,9 +14,6 @@
     <link rel='stylesheet' href='casual.css'>
   </head>
   <body>
-    <a href='https://github.com/costa'>
-      <img alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' src='https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67' style='position: absolute; top: 0; right: 0; border: 0;'>
-    </a>
     <header>
       <h1>
         <span class='centering-context'>
@@ -118,6 +116,32 @@
           </div>
         </div>
       </div>
+      <div class='work'>
+        <h3>
+          My project leading work
+        </h3>
+        <p>
+          <a href='http://aero-plan.com'>
+            <img class='aero-plan logo' src='aero-plan-logo-273x140.png' alt='Visit aero-plan.com'>
+            <span class='long-logo-desc'>
+              — Aero-plan.com: a currently running U.S.-based project
+            </span>
+          </a>
+        </p>
+        <p>
+          <a href='http://fb-crush.com'>
+            <img class='fb-crush logo' src='fb-crush-logo-250x125.jpg' alt='Visit fb-crush.com'>
+            <span class='long-logo-desc'>
+              — fb-CRUSH.com: a currently running toy project of mine
+            </span>
+          </a>
+        </p>
+        <p>
+          <a href='http://astrails.com/work'>
+            <em>Some other projects may be found in Astrails.com portfolio — ask for details</em>
+          </a>
+        </p>
+      </div>
     </main>
     <footer>
       <p>
@@ -145,13 +169,13 @@
       </p>
       <p>
         <a href='http://mines.mouldwarp.com'>
-          <span class='mines-logo'>mines!</span>
+          <span class='logo mines'>mines!</span>
           <span class='short-logo-desc'>— my old blog</span>
         </a>
       </p>
       <p>
         <a href='http://astrails.com'>
-          <img class='astrails-logo' src='astrails_100x95.png' alt='Visit astrails.com'>
+          <img class='astrails logo' src='astrails_100x95.png' alt='Visit astrails.com'>
           <span class='long-logo-desc'>
             — the latest and the greatest guys I've been working for
           </span>
@@ -160,7 +184,7 @@
       <hr>
       <p>
         <em>
-          Oh, and big up guys for my favourite working tools:
+          Oh, and thank you world for my favourite working tools:
         </em>
       </p>
       <ul class='tech-specs'>
@@ -207,6 +231,15 @@
           All that jazz!
         </li>
       </ul>
+      <hr>
+      <div class='social'>
+        <a class='twitter-share-button' data-count='none' data-text="Costa Shapiro's App Shop: one-stop full-stack construction" data-via='costashapiro' data-size='large' href='https://twitter.com/share'>Tweet</a>
+        <br>
+        <script>
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+        </script>
+        <div class='fb-like' data-action='like' data-href='https://www.facebook.com/costashapiro.appshop' data-layout='standard' data-share='true' data-show-faces='false'></div>
+      </div>
       <p>
         <img class='qr-code' alt='qr code' rel='nofollow' src='https://chart.googleapis.com/chart?cht=qr&amp;chl=https%3A%2F%2Fcostashapiro.com&amp;chs=180x180&amp;choe=UTF-8&amp;chld=L%7C2'>
       </p>
@@ -218,5 +251,18 @@
     </footer>
     <script src='type_fx.js'></script>
     <script src='uservoice.js' async></script>
+    <a href='https://github.com/costa'>
+      <img alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png' src='https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67' style='position: absolute; top: 0; right: 0; border: 0;'>
+    </a>
+    <div id='fb-root'></div>
+    <script>
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&appId=534280453345884&version=v2.0";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
   </body>
 </html>
