--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <a href='http://aero-plan.com'>
             <img class='aero-plan logo' src='aero-plan-logo-273x140.png' alt='Visit aero-plan.com'>
             <span class='long-logo-desc'>
-              — Aero-plan.com: a currently running U.S.-based project
+              — Aero-plan.com: a previously owned U.S.-based project
             </span>
           </a>
         </p>
@@ -140,7 +140,7 @@
           <a href='http://fb-crush.com'>
             <img class='fb-crush logo' src='fb-crush-logo-250x125.jpg' alt='Visit fb-crush.com'>
             <span class='long-logo-desc'>
-              — fb-CRUSH.com: a currently running toy project of mine
+              — fb-CRUSH.com: a somewhat neglected toy project of mine
             </span>
           </a>
         </p>
