BandManage/Owlytics midterm addition

--- a/costa_shapiro_cv.html
+++ b/costa_shapiro_cv.html
@@ -196,6 +196,14 @@
   <h2>Jobs</h2>
   <dl>
     <div>
+      <dt>2017&ndash;</dt>
+      <dd>Server Team Leader / Security Officer at <a href="https://www.owlytics.com" title="Personal Health Detection">Owlytics Healthcare</a> (core product team)
+        <ul class="pl">
+          <li>System back-end development & maintenance, including of large-data-volume analytical components</li>
+          <li>Information security compliance planning & supervision</li>
+          <li>Data ingestion / stream processing system architecture and integration</li>
+          <li>&ndash; Docker and friends, such as GKE; Ruby technologies for admin components, system tests, etc; Python technologies for data analysis; Apache technologies, such as Elastic stack and Kafka</li></ul></dd></div>
+    <div>
       <dt>2016&ndash;2016</dt>
       <dd>Core Developer at <a href="https://www.peer5.com" title="Peer5 - The Serverless P2P CDN For Video Live Streaming">Peer5</a> (core product team)
         <ul class="pl">
@@ -303,4 +311,4 @@
           <li>design and implementation of robotic manipulator software (including <acronym title="Graphical User Interface">GUI</acronym>, command language, robot control and simulation)</li>
           <li>&ndash; Pascal, Turbo&nbsp;Vision, x86 assembly, proprietary robot interface protocol, DOS</li></ul></dd></dl></div>
   <div class="footdate">
-    November 2016</div></body></html>
+    November 2017</div></body></html>
