--- a/costa_shapiro_cv.html
+++ b/costa_shapiro_cv.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="description" content="The Curriculum Vitae of Costa Shapiro">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <meta name="theme-color" content="#F0CFB2">
   <style type="text/css">
     /* The style is totally free to use, if you like it :) */
