Wording; experience; redaction, incl. contacts

--- a/costa_shapiro_cv.html
+++ b/costa_shapiro_cv.html
@@ -131,28 +131,27 @@
   <div class="contact">
     <ul class="brief">
       <li><a href="https://costashapiro.com" title="Visit Costa">https://costashapiro.com</a></li>
-      <li><a href="mailto:costa@mouldwarp.com" title="Mail Costa">costa@mouldwarp.com</a></li>
-      <li><a href="tel:+972547675708" title="Call Costa">+972-54-767-5708</a></li>
-      <li class="brief" title="Send Costa a present"><span>P.O.B.&nbsp;29685</span><span>Tel&nbsp;Aviv</span><span>ISRAEL 6129602</span></li></ul></div>
+      <li><a href="mailto:costa@mouldwarp.com" title="Mail Costa">costa@mouldwarp.com</a></li></ul></div>
   <h1><abbr title="Constantine">Costa</abbr> Shapiro</h1>
   <p>
-    is <strong>engineering software</strong> since the early 90's:</p>
+    is <strong>engineering software</strong> with computer science and information technologies since the early 90's:</p>
   <ul>
-    <li>Lifelong passion &rarr; learning and creating</li>
+    <li>Lifelong passion &rarr; exploration and discovery</li>
     <li>Academic background &rarr; research and development</li>
     <li>Rich experience &rarr; intuituion and pragmatism</li>
     <li>Product vision &rarr; business and strategy</li>
-    <li>Process specialty &rarr; mentoring and leadership</li></ul>
+    <li>Process specialty &rarr; leadership and mentoring</li></ul>
   <h2>Synopsis</h2>
   <ul>
+    <li>Over a decade of tech/dev <strong>leadership experience</strong> (various complex, incl. data-intensive systems)</li>
     <li>The first <strong>owned and paid</strong> project while still in high school (an educational robot <abbr title="as in software you run on your PC">program</abbr>)</li>
     <li>A total of 10 years of formal <strong>computer science</strong> education &mdash; from the high school up to the graduate school (Technion)</li>
     <li>Part-time/full-time, office/remote, hourly/salary, team member/coordinator/leader, hands-on/consulting/mentoring/supervising,
       OS/IP, all project scales + all company sizes, many areas of <abbr title="software">SW</abbr> and
       <abbr title="hardware">HW</abbr> &mdash; <strong>done</strong> (25+ years)</li>
-    <li>With the <strong>Internet</strong> since its early days to the present day &mdash; from the bottom up (whole stack)</li>
+    <li>With the <strong>Internet</strong> since its early days &mdash; including dev community connection and open-source contribution &mdash; from the bottom up (whole stack)</li>
     <li>Interested in owning and developing robust <strong>new</strong> technologies/systems/applications per specific business requirements (pragmatic agile ways)</li>
-    <li>Also available for consulting on anything IT-related, from architecture &mdash; through 3<sup>rd</sup> party technologies &mdash; to <abbr title="user experience">UX</abbr> (quite friendly)</li></ul>
+    <li>Also available for <strong>consulting</strong> on anything IT-related, from architecture &mdash; through 3<sup>rd</sup> party technologies &mdash; to <abbr title="user experience">UX</abbr> (talk to me, I'm quite friendly)</li></ul>
   <div class="columns">
     <div class="left">
       <h3>Currently Relevant Technologies</h3>
@@ -217,14 +216,6 @@
           <li>Trying to stabilise and extend the niche product technology</li>
           <li>&ndash; Docker technologies, NodeJS, HTML5 APIs, web video players APIs</li></ul></dd></div>
     <div>
-      <dt>2016&ndash;2016</dt>
-      <dd>Lead Developer at <a href="https://codefresh.io" title="Docker-Native Continuous Integration and Delivery with Codefresh">Codefresh</a>
-        (core product team)
-        <ul class="pl">
-          <li>Docker-based full (push-build-test-promote-launch) containerisation workflow as-a-service maintenance</li>
-          <li>Development of an RSpec-based Docker composition testing framework</li>
-          <li>&ndash; Docker technologies, NodeJS, Ruby</li></ul></dd></div>
-    <div>
       <dt>2015&ndash;2016</dt>
       <dd>Software Architect at <a href="https://showbox.com" title="Showbox - Your Online Video Maker | Quality Video Creator">Showbox</a> (video processing and data management back-end system)
         <ul class="pl">
@@ -236,11 +227,6 @@
         <ul class="pl">
           <li>technology expertise, architecture and interface design, wireframing, prototyping, requirements specification, production implementation, engineering support and management of web+mobile app projects</li>
           <li>&ndash; Ruby on Rails, Backbone+Marionette, NodeJS, RSpec, and a great deal of other contemporary client- and server- side technologies</li></ul></dd></div>
-    <div>
-      <dt>2010&ndash;present</dt>
-      <dd>Developing and participating in a number of independent/open-source projects
-        <ul class="pl">
-          <li>&ndash; Ruby on Rails, JavaScript, Sinatra, RSpec, Cucumber, etc</li></ul></dd></div>
     <div>
       <dt>2009&ndash;2010</dt>
       <dd>Senior Software Engineer at
@@ -317,4 +303,4 @@
           <li>design and implementation of robotic manipulator software (including <abbr title="Graphical User Interface">GUI</abbr>, command language, robot control and simulation)</li>
           <li>&ndash; Pascal, Turbo&nbsp;Vision, x86 assembly, proprietary robot interface protocol, DOS</li></ul></dd></dl></div>
   <div class="footdate">
-    February 2019</div></body></html>
+    December 2019</div></body></html>
